# godot-cpp-dodge

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
cmake/Modules/: Conan.cmake  Godot.cmake
godot/: .gitignore  export_presets.cfg  project.godot
godot/art/: SFX_Pickup_19.wav.import  deathSparkle.png.import  star coin rotate 1.png.import  star coin rotate 2.png.import  star coin rotate 3.png.import  star coin rotate 4.png.import  star coin rotate 5.png.import  star coin rotate 6.png.import
godot/scenes/: Coin.tscn  HUD.tscn  Main.tscn  Mob.tscn  Player.tscn
include/: Coin.hpp  HUD.hpp  Main.hpp  Mob.hpp  Player.hpp  Rng.hpp  TypedNodeCastMixin.hpp
source/: Coin.cpp  HUD.cpp  Main.cpp  Mob.cpp  Player.cpp  Rng.cpp  godot_native_library.cpp
support/: build_packages
